...
  State<ChannelTransferScreen> createState() => _ChannelTransferScreenState();
}

class _ChannelTransferScreenState extends State<ChannelTransferScreen> {
  // Hanya menampilkan satu tipe tabel, jadi ViewType dan toggle tidak diperlukan
  // Judul yang akan ditampilkan di halaman
  final String pageTitle = 'Manajemen Channel Transfer';

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text(pageTitle),
...
