...
  ViewType _currentView = ViewType.warga; // Tampilan awal adalah Data Warga

  @override
  Widget build(BuildContext context) {
    // Judul yang akan ditampilkan di halaman
    final String pageTitle = _currentView == ViewType.warga
        ? 'Data Warga'
        : 'Data Rumah / Alamat';

    return Scaffold(
      appBar: AppBar(
        title: Text(pageTitle),
        backgroundColor: Colors.blue.shade700,
...
